@@ -13,7 +13,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import jakarta.persistence.Id;
 
@@ -69,18 +68,21 @@ public final class KotlinPanacheResourceProcessor {
             Optional<JpaModelPersistenceUnitMappingBuildItem> jpaModelPersistenceUnitMapping) {
 
         List<PanacheMethodCustomizer> methodCustomizers = methodCustomizersBuildItems.stream()
-                .map(bi -> bi.getMethodCustomizer()).collect(Collectors.toList());
+                .map(PanacheMethodCustomizerBuildItem::getMethodCustomizer).toList();
 
         TypeBundle bundle = KotlinJpaTypeBundle.BUNDLE;
 
-        processRepositories(index, transformers, reflectiveClass, createRepositoryEnhancer(index, methodCustomizers),
+        List<String> forReflection = new ArrayList<>(100); // to avoid too many repeated array growths
+        processRepositories(index, transformers, forReflection, createRepositoryEnhancer(index, methodCustomizers),
                 bundle.repositoryBase(), bundle.repository());
 
-        processEntities(index, transformers, reflectiveClass, recorder, jpaModelPersistenceUnitMapping,
+        processEntities(index, transformers, forReflection, recorder, jpaModelPersistenceUnitMapping,
                 createEntityEnhancer(index, methodCustomizers), bundle.entityBase(), bundle.entity());
 
-        processCompanions(index, transformers, reflectiveClass, createCompanionEnhancer(index, methodCustomizers),
+        processCompanions(index, transformers, forReflection, createCompanionEnhancer(index, methodCustomizers),
                 bundle.entityCompanionBase(), bundle.entityCompanion());
+
+        reflectiveClass.produce(ReflectiveClassBuildItem.builder(forReflection).methods().fields().build());
     }
 
     private PanacheEntityEnhancer createEntityEnhancer(CombinedIndexBuildItem index,
@@ -121,7 +123,7 @@ public final class KotlinPanacheResourceProcessor {
 
     private void processEntities(CombinedIndexBuildItem index,
             BuildProducer<BytecodeTransformerBuildItem> transformers,
-            BuildProducer<ReflectiveClassBuildItem> reflectiveClass,
+            List<String> classNamesToRegisterForReflection,
             PanacheKotlinHibernateOrmRecorder recorder,
             Optional<JpaModelPersistenceUnitMappingBuildItem> jpaModelPersistenceUnitMapping,
             PanacheEntityEnhancer entityEnhancer,
@@ -130,16 +132,16 @@ public final class KotlinPanacheResourceProcessor {
 
         Set<String> modelClasses = new HashSet<>();
         // Note that we do this in two passes because for some reason Jandex does not give us subtypes
-        for (ClassInfo classInfo : index.getIndex().getAllKnownImplementors(baseType.dotName())) {
+        for (ClassInfo classInfo : index.getIndex().getAllKnownImplementations(baseType.dotName())) {
             if (classInfo.name().equals(type.dotName())) {
                 continue;
             }
             String name = classInfo.name().toString();
             if (modelClasses.add(name)) {
                 transformers.produce(new BytecodeTransformerBuildItem(name, entityEnhancer));
-                reflectiveClass.produce(ReflectiveClassBuildItem.builder(name).methods().fields().build());
             }
         }
+        classNamesToRegisterForReflection.addAll(modelClasses);
 
         Map<String, Set<String>> collectedEntityToPersistenceUnits;
         boolean incomplete;
@@ -171,13 +173,13 @@ public final class KotlinPanacheResourceProcessor {
 
     private void processRepositories(CombinedIndexBuildItem index,
             BuildProducer<BytecodeTransformerBuildItem> transformers,
-            BuildProducer<ReflectiveClassBuildItem> reflectiveClass,
+            List<String> classNamesToRegisterForReflection,
             PanacheRepositoryEnhancer enhancer,
             ByteCodeType baseType,
             ByteCodeType type) {
 
         Set<Type> typeParameters = new HashSet<>();
-        for (ClassInfo classInfo : index.getIndex().getAllKnownImplementors(baseType.dotName())) {
+        for (ClassInfo classInfo : index.getIndex().getAllKnownImplementations(baseType.dotName())) {
             if (classInfo.name().equals(type.dotName()) || enhancer.skipRepository(classInfo)) {
                 continue;
             }
@@ -186,20 +188,19 @@ public final class KotlinPanacheResourceProcessor {
         }
         for (Type parameterType : typeParameters) {
             // Register for reflection the type parameters of the repository: this should be the entity class and the ID class
-            reflectiveClass.produce(
-                    ReflectiveClassBuildItem.builder(parameterType.name().toString()).methods().fields().build());
+            classNamesToRegisterForReflection.add(parameterType.name().toString());
         }
     }
 
     private void processCompanions(CombinedIndexBuildItem index,
             BuildProducer<BytecodeTransformerBuildItem> transformers,
-            BuildProducer<ReflectiveClassBuildItem> reflectiveClass,
+            List<String> classNamesToRegisterForReflection,
             KotlinPanacheCompanionEnhancer enhancer,
             ByteCodeType baseType,
             ByteCodeType type) {
 
         Set<Type> typeParameters = new HashSet<>();
-        for (ClassInfo classInfo : index.getIndex().getAllKnownImplementors(baseType.dotName())) {
+        for (ClassInfo classInfo : index.getIndex().getAllKnownImplementations(baseType.dotName())) {
             if (classInfo.name().equals(type.dotName())) {
                 continue;
             }
@@ -209,8 +210,7 @@ public final class KotlinPanacheResourceProcessor {
 
         for (Type parameterType : typeParameters) {
             // Register for reflection the type parameters of the repository: this should be the entity class and the ID class
-            reflectiveClass.produce(
-                    ReflectiveClassBuildItem.builder(parameterType.name().toString()).methods().fields().build());
+            classNamesToRegisterForReflection.add(parameterType.name().toString());
         }
     }
 
